modify ui of report

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,14 +6,15 @@
     <string name="settings">设置</string>
     <string name="on">开</string>
     <string name="off">关</string>
-    <string name="nullString"></string>
     <string name="rmb">¥</string>
+    <string name="notAvailable">N/A</string>
     
     <string name="confirm">确定</string>
     <string name="save">保存</string>
     <string name="cancel">取消</string>
     <string name="add">添加</string>
     <string name="back">返回</string>
+    <string name="next">下一步</string>
     <string name="modify">修改</string>
     <string name="remove">删除</string>
     <string name="tip">提示</string>
@@ -23,24 +24,24 @@
     <string name="status">状态</string>
     <string name="detail">详情</string>
     
-    <string name="signUp">注册</string>
-    <string name="signUpByPhone">用手机注册</string>
-    <string name="signUpByEmail">用邮箱注册</string>
-    <string name="signIn">登录</string>
-    <string name="inputUsername">手机/邮箱</string>
-    <string name="inputPassword">密码</string>
-    <string name="inputNewPassword">设置密码</string>
-    <string name="inputConfirmPassword">确认密码</string>
-    <string name="forgotPassword">忘记密码</string>
-    <string name="findPasswordByPhone">用手机找回</string>
-    <string name="findPasswordByEmail">用邮箱找回</string>
-    <string name="inputEmail">请输入邮箱</string>
-    <string name="inputPhone">请输入手机号</string>
-    <string name="inputCode">请输入验证码</string>
-    <string name="acquireCode">获取验证码</string>
-    <string name="emailSentPrompt">邮件已发送，请查阅邮箱！</string>
-    <string name="errorCode">验证码输入错误！</string>
-    <string name="errorNoCode">未获取到任何验证码！</string>
+    <string name="sign_up">注册</string>
+    <string name="sign_up_by_phone">用手机注册</string>
+    <string name="sign_up_by_email">用邮箱注册</string>
+    <string name="sign_in">登录</string>
+    <string name="input_username">请输入手机/邮箱</string>
+    <string name="input_password">请输入密码</string>
+    <string name="input_new_password">请输入新密码</string>
+    <string name="input_confirm_password">请确认密码</string>
+    <string name="forgot_password">忘记密码</string>
+    <string name="find_password_by_phone">用手机找回</string>
+    <string name="find_password_by_email">用邮箱找回</string>
+    <string name="input_email">请输入邮箱</string>
+    <string name="input_phone">请输入手机号</string>
+    <string name="input_code">请输入验证码</string>
+    <string name="acquire_code">获取验证码</string>
+    <string name="email_sent_prompt">邮件已发送，请查阅邮箱！</string>
+    <string name="error_code">验证码输入错误！</string>
+    <string name="error_no_code">未获取到任何验证码！</string>
     
     <string name="reimbursement">报销</string>
     <string name="report">报告</string>
@@ -48,120 +49,121 @@
     <string name="me">自己</string>
     
     <string name="sort">排序</string> 
-    <string name="sortNull">无</string>
-    <string name="sortAmount">金额</string>
-    <string name="sortItemsCount">条目数</string>
-    <string name="sortUpdateDate">修改时间</string>
-    <string name="sortCreateDate">创建时间</string>
-    <string name="sortConsumedDate">时间</string>
+    <string name="sort_null">无</string>
+    <string name="sort_amount">金额</string>
+    <string name="sort_item_count">条目数</string>
+    <string name="sort_update_date">修改时间</string>
+    <string name="sort_create_date">创建时间</string>
+    <string name="sort_consumed_date">时间</string>
     <string name="filter">筛选</string>
-    <string name="filterAll">全部</string>
-    <string name="filterProveAhead">预申请</string>
-    <string name="filterConsumed">已消费</string>
-    <string name="filterAdded">已加入报告</string>
-    <string name="filterFree">未加入报告</string>
-    <string name="filterTags">标签</string>    
+    <string name="filter_all">全部</string>
+    <string name="filter_prove_ahead">预申请</string>
+    <string name="filter_consumed">已消费</string>
+    <string name="filter_added">已加入报告</string>
+    <string name="filter_free">未加入报告</string>
+    <string name="filter_tags">标签</string>    
     
-    <string name="inputAmount">请输入金额</string>
+    <string name="input_amount">请输入金额</string>
+    <string name="input_note">请输入备注</string>
+    <string name="input_keyword">请输入关键字</string>
     <string name="invoice">发票</string>
-    <string name="reimType">报销类型</string>
+    <string name="reim_type">报销类型</string>
     <string name="consumed">已消费</string>
-    <string name="proveAhead">预申请</string>
-    <string name="itemApproved">已审批</string>
-    <string name="actualCost">实际消费</string>
+    <string name="prove_ahead">预申请</string>
+    <string name="need_reimburse">需要报销</string>
+    <string name="item_approved">已审批</string>
+    <string name="actual_cost">实际消费</string>
     <string name="budget">预算</string>
-    <string name="needReimburse">需要报销</string>
     <string name="type">类&#160;&#160;&#160;&#8201;型</string>
     <string name="photo">照&#160;&#160;&#160;&#8201;片</string>
     <string name="category">类&#160;&#160;&#160;&#8201;别</string>
     <string name="vendor">供应商</string>
     <string name="location">地&#160;&#160;&#160;&#8201;点</string>
-    <string name="currentLocation">当前城市:</string>
-    <string name="locationInvalid">未获取到城市信息</string>
+    <string name="current_location">当前城市:</string>
+    <string name="location_invalid">未获取到城市信息</string>
     <string name="tag">标&#160;&#160;&#160;&#8201;签</string>
     <string name="member">参与者</string>
     <string name="time">日&#160;&#160;&#160;&#8201;期</string>
     <string name="note">备&#160;&#160;&#160;&#8201;注</string>
-    <string name="chooseCategory">选择类别</string>
-    <string name="chooseVendor">选择商家</string>
-    <string name="chooseLocation">选择城市</string>
-    <string name="allCities">全部城市</string>
-    <string name="chooseTag">选择标签</string>
-    <string name="chooseDate">选择日期</string>
-    <string name="chooseTime">选择时间</string>
-    <string name="chooseMember">选择参与人员</string>
-    <string name="chooseFromCamera">拍照</string>
-    <string name="chooseFromGallery">从手机相册选择</string>
-    <string name="inputLocation">请输入城市</string>
-    <string name="inputNote">请输入备注</string>
-    <string name="inputKeyword">请输入关键字</string>
-    <string name="onlySave">仅保存</string>
-    <string name="sendToApprove">发送审批</string>
-    <string name="notAvailable">N/A</string>
-    <string name="deleteItemWarning">是否要删除此条目？</string>
-    <string name="deleteSucceed">删除成功</string>
-    <string name="deleteFailed">删除失败</string>
+    <string name="choose_category">选择类别</string>
+    <string name="choose_vendor">选择商家</string>
+    <string name="choose_location">选择城市</string>
+    <string name="choose_tag">选择标签</string>
+    <string name="choose_member">选择参与人员</string>
+    <string name="choose_from_camera">拍照</string>
+    <string name="choose_from_gallery">从手机相册选择</string>
+    <string name="input_location">请输入城市</string>
+    <string name="all_cities">全部城市</string>
+    <string name="only_save">仅保存</string>
+    <string name="send_to_approve">发送审批</string>
+    <string name="delete_item_warning">是否要删除此条目？</string>
+    <string name="delete_succeed">删除成功</string>
+    <string name="delete_failed">删除失败</string>
     
-    <string name="myReport">我的</string>
-    <string name="othersReport">需报销</string>
-    <string name="inputReportTitle">请输入报告名称</string>
-    <string name="addComment">添加评论</string>
-    <string name="checkComment">查看评论</string>
-    <string name="inputComment">请输入评论</string>
-    <string name="noComment">当前没有任何评论</string>
-    <string name="noManager">未选择经理</string>
-    <string name="noCC">未选择CC</string>
-    <string name="sender">发送人:</string>
-    <string name="chooseManager">选择经理</string>
-    <string name="chooseCC">选择抄送</string>
-    <string name="deleteReportWarning">是否要删除此报告？</string>
+    <string name="my_report">我的</string>
+    <string name="others_report">需审批</string>
+    <string name="input_report_title">请输入报告名称</string>
+    <string name="report_detail">报告详情</string>
+    <string name="comment">评论</string>
+    <string name="add_comment">添加评论</string>
+    <string name="check_comment">查看评论</string>
+    <string name="input_comment">请输入评论</string>
+    <string name="no_comment">当前没有任何评论</string>
+    <string name="no_manager">未选择经理</string>
+    <string name="no_cc">未选择CC</string>
+    <string name="sender">发送者</string>
+    <string name="submit_to">提交至</string>
+    <string name="cc">抄&#160;&#160;&#160;&#8201;送</string>
+    <string name="total_amount">总&#160;&#160;&#160;&#8201;额</string>
+    <string name="item_count">条目</string>
+    <string name="choose_manager">选择经理</string>
+    <string name="choose_cc">选择抄送</string>
+    <string name="delete_report_warning">是否要删除此报告？</string>
     <string name="submit">提交</string>
     <string name="approve">批准</string>
     <string name="reject">拒绝</string>
-    <string name="reportOverFlow">99+</string>    
+    <string name="report_over_flow">99+</string>    
     
-    <string name="personalCenter">个人中心</string>
+    <string name="personal_center">个人中心</string>
     <string name="avatar">头像</string>
-    <string name="enablePasswordProtection">开启密码保护</string>
-    <string name="syncWithoutWifi">仅WiFi开启时上传云端</string>
+    <string name="enable_password_protection">开启密码保护</string>
+    <string name="sync_without_wifi">仅WiFi开启时上传云端</string>
     <string name="preference">偏好设置</string>
-    <string name="getInvoice">我要开发票</string>
-    <string name="myInvites">收到的邀请</string>
+    <string name="get_invoice">我要开发票</string>
+    <string name="my_invites">收到的邀请</string>
     <string name="invite">邀请好友</string>
     <string name="share">分享</string>
-    <string name="customService">联系客服</string>
+    <string name="custom_service">联系客服</string>
     <string name="feedback">意见反馈</string>
-    <string name="signOut">退出登录</string>
-    <string name="personalInfo">个人信息</string>
+    <string name="sign_out">退出登录</string>
+    <string name="personal_info">个人信息</string>
     <string name="email">邮箱</string>
     <string name="phone">手机</string>
     <string name="company">公司</string>
     <string name="nickname">昵称</string>
-    <string name="changePassword">修改密码</string>
-    <string name="defaultManager">我的上级</string>
-    <string name="categoryManagement">分类管理</string>
-    <string name="tagManagement">标签管理</string>
-    <string name="inputCompanyName">请输入公司名称</string>
-    <string name="inputNickname">请输入昵称</string>
-    <string name="inputOldPassword">请输入旧密码</string>
-    <string name="confirmNewPasswordPrompt">请确认新密码</string>
-    <string name="inputFeedback">请输入您的意见或建议</string>
-    <string name="inputContactInfo">请输入您的联系方式</string>
-    <string name="inputCategoryName">请输入分类名称</string>
-    <string name="inputCategoryLimit">请输入分类限额</string>
+    <string name="change_password">修改密码</string>
+    <string name="default_manager">我的上级</string>
+    <string name="category_management">分类管理</string>
+    <string name="tag_management">标签管理</string>
+    <string name="input_company_name">请输入公司名称</string>
+    <string name="input_nickname">请输入昵称</string>
+    <string name="input_feedback">请输入您的意见或建议</string>
+    <string name="input_contact_info">请输入您的联系方式</string>
+    <string name="input_category_name">请输入分类名称</string>
+    <string name="input_category_limit">请输入分类限额</string>
     <string name="icon">图标</string>
-    <string name="subCategory">子分类</string>
-    <string name="inputTagName">请输入标签名称</string>
-    <string name="inputUserContact">请输入对方手机号或邮箱</string>
+    <string name="sub_category">子分类</string>
+    <string name="input_tag_name">请输入标签名称</string>
+    <string name="input_user_contact">请输入对方手机号或邮箱</string>
     <string name="agree">同意</string>
-    <string name="noInvites">没有收到任何邀请</string>
-    <string name="noCategories">当前没有任何分类</string>
-    <string name="noTags">当前没有任何标签</string>
-    <string name="getInvoicePrompt">发票抬头请开：</string>
-    <string name="invoiceInvalid">还没公司，开啥发票</string>
-    <string name="aboutUs">关于我们</string>
-    <string name="currentVersion">当前版本：</string>
-    <string name="aboutContent">瞎看什么?!</string>
+    <string name="no_invites">没有收到任何邀请</string>
+    <string name="no_categories">当前没有任何分类</string>
+    <string name="no_tags">当前没有任何标签</string>
+    <string name="get_invoice_prompt">发票抬头请开：</string>
+    <string name="invoice_invalid">还没公司，开啥发票</string>
+    <string name="about_us">关于我们</string>
+    <string name="current_version">当前版本：</string>
+    <string name="about_content">瞎看什么?!</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
@@ -177,4 +179,5 @@
         <item>退回</item>
         <item>结束</item>
     </string-array>
+    
 </resources>
