--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="on">开</string>
     <string name="off">关</string>
     <string name="rmb">¥</string>
-    <string name="notAvailable">N/A</string>
+    <string name="not_available">N/A</string>
     
     <string name="confirm">确定</string>
     <string name="save">保存</string>
@@ -92,6 +92,8 @@
     <string name="choose_member">选择参与人员</string>
     <string name="choose_from_camera">拍照</string>
     <string name="choose_from_gallery">从手机相册选择</string>
+    <string name="input_vendor">请输入商家</string>
+    <string name="no_vendor">无法获取商家，请手动输入</string>
     <string name="input_location">请输入城市</string>
     <string name="all_cities">全部城市</string>
     <string name="only_save">仅保存</string>
@@ -173,6 +175,10 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
+    <string name="vendor_taxi">出租车</string>
+    <string name="vendor_flight">飞机票</string>
+    <string name="vendor_train">火车票</string>
+    <string name="vendor_phone">话费</string>
     
     <string name="versionControl">夏</string>
     
