--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,8 +25,9 @@
     <string name="detail">详情</string>
     
     <string name="sign_up">注册</string>
-    <string name="sign_up_by_phone">用手机注册</string>
-    <string name="sign_up_by_email">用邮箱注册</string>
+    <string name="sign_up_by_phone">手机注册</string>
+    <string name="sign_up_by_email">邮箱注册</string>
+    <string name="have_password">已有云报销账号</string>
     <string name="sign_in">登录</string>
     <string name="input_username">请输入手机/邮箱</string>
     <string name="input_password">请输入密码</string>
