--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="back">返回</string>
     <string name="complete">完成</string>
     <string name="next">下一步</string>
+    <string name="send">发送</string>
     <string name="modify">修改</string>
     <string name="delete">删除</string>
     <string name="tip">提示</string>
@@ -131,7 +132,7 @@
     <string name="delete_report_warning">是否要删除此报告？</string>
     <string name="no_unarchived_items">没有可使用的条目</string>
     <string name="submit">提交</string>
-    <string name="approve">批准</string>
+    <string name="approve">同意</string>
     <string name="reject">拒绝</string>
     <string name="report_over_flow">99+</string>
     
@@ -184,7 +185,7 @@
     <string name="feedback">意见反馈</string>
     <string name="sign_out">退出登录</string>
     <string name="current_version">当前版本：</string>
-    <string name="about_content">瞎看什么?!</string>
+    <string name="about_content">瞎看什么看。。。</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
