modify ui of feedback

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -201,6 +201,6 @@
     <string name="vendor_train">火车票</string>
     <string name="vendor_phone">话费</string>
     
-    <string name="versionControl">夏</string>
+    <string name="versionControl">商</string>
     
 </resources>
