add sub category

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="tip">提示</string>
     <string name="error">错误</string>
     <string name="warning">警告</string>
+    <string name="option">选项</string>
     <string name="search">搜索</string>
     <string name="status">状态</string>
     <string name="detail">详情</string>
@@ -34,19 +35,11 @@
     <string name="sign_up_by_email">邮箱注册</string>
     <string name="have_password">已有云报销账号</string>
     <string name="sign_in">登录</string>
-    <string name="input_username">请输入手机/邮箱</string>
-    <string name="input_password">请输入密码</string>
-    <string name="input_new_password">请输入新密码</string>
-    <string name="input_confirm_password">请确认密码</string>
     <string name="forgot_password">忘记密码</string>
     <string name="find_password_by_phone">手机找回</string>
     <string name="find_password_by_email">邮箱找回</string>
-    <string name="input_email">请输入邮箱</string>
-    <string name="input_phone">请输入手机号</string>
-    <string name="input_code">请输入验证码</string>
     <string name="acquire_code">获取验证码</string>
     <string name="send_verify_email">发送验证邮件</string>
-    <string name="email_sent_prompt">邮件已发送，请查阅邮箱！</string>
     <string name="error_code">验证码输入错误！</string>
     <string name="error_no_code">未获取到任何验证码！</string>
     <string name="reset_password">设置新密码</string>
@@ -72,9 +65,6 @@
     <string name="filter_free">未加入报告</string>
     <string name="filter_tags">标签</string>    
     
-    <string name="input_amount">请输入金额</string>
-    <string name="input_note">请输入备注</string>
-    <string name="input_keyword">请输入关键字</string>
     <string name="invoice">发票</string>
     <string name="reim_type">报销类型</string>
     <string name="consumed">已消费</string>
@@ -89,7 +79,6 @@
     <string name="vendor">供应商</string>
     <string name="location">地&#160;&#160;&#160;&#8201;点</string>
     <string name="current_location">当前城市:</string>
-    <string name="location_invalid">未获取到城市信息</string>
     <string name="tag">标&#160;&#160;&#160;&#8201;签</string>
     <string name="member">参与者</string>
     <string name="time">日&#160;&#160;&#160;&#8201;期</string>
@@ -101,42 +90,31 @@
     <string name="choose_member">选择参与人员</string>
     <string name="choose_from_camera">拍照</string>
     <string name="choose_from_gallery">从手机相册选择</string>
-    <string name="input_vendor">请输入商家</string>
-    <string name="no_vendor">无法获取商家，请手动输入</string>
-    <string name="input_location">请输入城市</string>
     <string name="all_cities">全部城市</string>
     <string name="only_save">仅保存</string>
     <string name="send_to_approve">发送审批</string>
-    <string name="delete_item_warning">是否要删除此条目？</string>
-    <string name="delete_succeed">删除成功</string>
-    <string name="delete_failed">删除失败</string>
     
     <string name="my_report">我的</string>
     <string name="others_report">需审批</string>
-    <string name="input_report_title">请输入报告名称</string>
     <string name="report_detail">报告详情</string>
+    <string name="report_prove_ahead">预审批的报告</string>
     <string name="comment">评论</string>
     <string name="add_comment">添加评论</string>
     <string name="check_comment">查看评论</string>
-    <string name="input_comment">请输入评论</string>
-    <string name="no_comment">当前没有任何评论</string>
-    <string name="no_manager">未选择经理</string>
-    <string name="no_cc">未选择CC</string>
     <string name="sender">发送者</string>
     <string name="submit_to">提交至</string>
     <string name="cc">抄&#160;&#160;&#160;&#8201;送</string>
     <string name="total_amount">总&#160;&#160;&#160;&#8201;额</string>
-    <string name="item_count">条目</string>
+    <string name="item_count">个条目</string>
     <string name="choose_manager">选择经理</string>
     <string name="choose_cc">选择抄送</string>
-    <string name="delete_report_warning">是否要删除此报告？</string>
-    <string name="no_unarchived_items">没有可使用的条目</string>
     <string name="submit">提交</string>
     <string name="approve">同意</string>
     <string name="reject">拒绝</string>
     <string name="reject_reason">拒绝理由：</string>
     <string name="report_over_flow">99+</string>
     <string name="export">导出</string>
+    <string name="export_report">导出报告</string>
     
     <string name="mark">标记</string>
     <string name="stat_done">已报销</string>
@@ -165,29 +143,75 @@
     <string name="change_password">修改密码</string>
     <string name="default_manager">我的上级</string>
     <string name="not_binding">未绑定</string>
-    <string name="input_company_name">请输入公司名称</string>
-    <string name="input_nickname">请输入昵称</string>
-    <string name="input_feedback">请输入您的意见或建议</string>
-    <string name="input_contact_info">请输入您的联系方式</string>
-    <string name="input_category_name">请输入类别名称</string>
-    <string name="input_category_limit">请输入类别限额</string>
     <string name="icon">图标</string>
     <string name="sub_category">子类别</string>
-    <string name="input_tag_name">请输入标签名称</string>
-    <string name="input_user_contact">请输入对方手机号或邮箱</string>
     <string name="agree">同意</string>
-    <string name="no_messages">当前没有任何消息</string>
     <string name="get_invoice_prompt">发票抬头请开：</string>
     <string name="invoice_invalid">还没公司，开啥发票</string>
     <string name="category_management">类别管理</string>
     <string name="tag_management">标签管理</string>
-    <string name="no_categories">当前没有任何类别</string>
-    <string name="no_tags">当前没有任何标签</string>
     <string name="about_us">关于我们</string>
     <string name="feedback">意见反馈</string>
     <string name="sign_out">退出登录</string>
     <string name="current_version">当前版本：</string>
-    <string name="about_content">瞎看什么看。。。</string>
+    <string name="about_content">瞎看什么看。。。</string>    
+    
+    <string name="input_username">请输入手机/邮箱</string>
+    <string name="input_password">请输入密码</string>
+    <string name="input_new_password">请输入新密码</string>
+    <string name="input_confirm_password">请确认密码</string>
+    <string name="input_email">请输入邮箱</string>
+    <string name="input_phone">请输入手机号</string>
+    <string name="input_code">请输入验证码</string>
+    <string name="input_amount">请输入金额</string>
+    <string name="input_note">请输入备注</string>
+    <string name="input_keyword">请输入关键字</string>
+    <string name="input_vendor">请输入商家</string>
+    <string name="input_location">请输入城市</string>
+    <string name="input_report_title">请输入报告名称</string>
+    <string name="input_comment">请输入评论</string>
+    <string name="input_nickname">请输入昵称</string>
+    <string name="input_company_name">请输入公司名称</string>
+    <string name="input_feedback">请输入您的意见或建议</string>
+    <string name="input_contact_info">请输入您的联系方式</string>
+    <string name="input_category_name">请输入类别名称</string>
+    <string name="input_category_limit">请输入类别限额</string>
+    <string name="input_tag_name">请输入标签名称</string>
+    <string name="input_user_contact">请输入对方手机号或邮箱</string>
+    
+    <string name="prompt_loading">读取数据中，请稍等......</string>
+    <string name="prompt_data_error">数据读取失败</string>
+    <string name="prompt_sign_up_succeed">注册成功！</string>
+    <string name="prompt_sign_up_succeed_with_email">注册成功！激活邮件已发送，请到邮箱中查看！</string>
+    <string name="prompt_email_sent">邮件已发送，请查阅邮箱！</string>
+    <string name="prompt_password_changed">密码修改成功！</string>
+    <string name="prompt_default_manager_changed">默认上级修改成功！</string>
+    <string name="prompt_feedback_sent">反馈发送成功！</string>
+    <string name="prompt_invite_list_failed">获取邀请列表失败</string>
+    <string name="prompt_invite_reply_sent">邀请回复发送成功！</string>
+    <string name="prompt_save_prove_ahead_item">这是一条预审批的条目，您是想仅保存此条目还是要直接发送给上级审批？</string>
+    <string name="prompt_delete_item">是否要删除此条目？</string>
+    <string name="prompt_delete_report">是否要删除此报告？</string>
+    <string name="prompt_delete_category">是否要删除此类别？</string>
+    <string name="prompt_delete_tag">是否要删除此标签？</string>
+    <string name="prompt_delete_succeed">删除成功</string>
+    <string name="prompt_delete_failed">删除失败</string>
+    
+    <string name="no_vendor">无法获取商家，请手动输入</string>
+    <string name="no_location">未获取到城市信息</string>
+    <string name="no_member">当前组没有其他成员</string>
+    <string name="no_comment">当前没有任何评论</string>
+    <string name="no_manager">未选择经理</string>
+    <string name="no_cc">未选择CC</string>
+    <string name="no_unarchived_items">没有可使用的条目</string>
+    <string name="no_messages">当前没有任何消息</string>
+    <string name="no_categories">当前没有任何类别</string>
+    <string name="no_tags">当前没有任何标签</string>
+    
+    <string name="vendor_taxi">出租车</string>
+    <string name="vendor_flight">飞机票</string>
+    <string name="vendor_train">火车票</string>
+    <string name="vendor_phone">话费</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
@@ -195,11 +219,6 @@
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    
-    <string name="vendor_taxi">出租车</string>
-    <string name="vendor_flight">飞机票</string>
-    <string name="vendor_train">火车票</string>
-    <string name="vendor_phone">话费</string>
     
     <string name="versionControl">商</string>
     
