--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -225,6 +225,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
-    <string name="versionControl">商</string>
+    <string name="versionControl">西周</string>
     
 </resources>
