--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,7 +71,6 @@
     <string name="consumed">已消费</string>
     <string name="prove_ahead">预申请</string>
     <string name="need_reimburse">需要报销</string>
-    <string name="item_approved">已审批</string>
     <string name="actual_cost">实际消费</string>
     <string name="budget">预算</string>
     <string name="type">类&#160;&#160;&#160;&#8201;型</string>
@@ -146,7 +145,8 @@
     <string name="not_binding">未绑定</string>
     <string name="icon">图标</string>
     <string name="sub_category">子类别</string>
-    <string name="agree">同意</string>
+    <string name="join_group">加入团队</string>
+    <string name="reject_invite">拒绝邀请</string>
     <string name="get_invoice_prompt">发票抬头请开：</string>
     <string name="invoice_invalid">还没公司，开啥发票</string>
     <string name="category_management">类别管理</string>
@@ -216,7 +216,14 @@
     <string name="vendor_taxi">出租车</string>
     <string name="vendor_flight">飞机票</string>
     <string name="vendor_train">火车票</string>
-    <string name="vendor_phone">话费</string>
+    <string name="vendor_phone">话费</string>    
+    
+    <string name="status_draft">草稿</string>
+    <string name="status_submitted">提交</string>
+    <string name="status_approved">通过</string>
+    <string name="status_rejected">退回</string>
+    <string name="status_finished">完成</string>
+    <string name="status_prove_ahead_approved">已审批</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
