--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="approve">同意</string>
     <string name="reject">拒绝</string>
     <string name="reject_reason">拒绝理由：</string>
+    <string name="message">留言</string>
     <string name="report_over_flow">99+</string>
     <string name="export">导出</string>
     <string name="export_report">导出报告</string>
