--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -226,7 +226,8 @@
     <string name="status_approved">通过</string>
     <string name="status_rejected">退回</string>
     <string name="status_finished">完成</string>
-    <string name="status_prove_ahead_approved">已审批</string>
+    <string name="status_prove_ahead">预</string>
+    <string name="status_prove_ahead_approved">(已审批)</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
@@ -235,6 +236,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
-    <string name="versionControl">西周</string>
+    <string name="versionControl">东周</string>
     
 </resources>
