--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="report_over_flow">99+</string>
     <string name="export">导出</string>
     <string name="export_report">导出报告</string>
+    <string name="new_item">新建条目</string>
     
     <string name="mark">标记</string>
     <string name="stat_done">已报销</string>
