--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="export">导出</string>
     <string name="export_report">导出报告</string>
     <string name="new_item">新建条目</string>
+    <string name="approve_info_hint">审批情况 ></string>
+    <string name="approve_info">审批情况</string>
     
     <string name="mark">标记</string>
     <string name="stat_done">已报销</string>
