--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -304,6 +304,7 @@
     <string name="succeed_in_submitting_report">提交报告成功</string>
     <string name="succeed_in_signing_up">注册成功!正在获取数据</string>
     
+    <string name="failed_to_get_code">获取验证码失败</string>
     <string name="failed_to_get_data">获取数据失败</string>
     <string name="failed_to_get_vendor">获取商家列表失败, 请手动输入</string>
     <string name="failed_to_get_vendor_no_data">未获取到任何商家, 请手动输入</string>
@@ -373,6 +374,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
-    <string name="versionControl">东周</string>
+    <string name="versionControl">春秋</string>
     
 </resources>
