--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -165,7 +165,7 @@
     <string name="feedback">意见反馈</string>
     <string name="sign_out">退出登录</string>
     <string name="current_version">当前版本：</string>
-    <string name="about_content">瞎看什么看。。。</string>
+    <string name="about_content">瞎看什么看&#8230;</string>
     
     <string name="share_wechat">微信分享</string>
     <string name="share_wechat_content">这是来自云报销的微信分享</string>
@@ -199,7 +199,7 @@
     <string name="input_tag_name">请输入标签名称</string>
     <string name="input_user_contact">请输入对方手机号或邮箱</string>
     
-    <string name="prompt_loading">读取数据中，请稍等......</string>
+    <string name="prompt_loading">正在努力加载中&#8230;</string>
     <string name="prompt_data_error">数据读取失败</string>
     <string name="prompt_sign_up_succeed">注册成功！</string>
     <string name="prompt_sign_up_succeed_with_email">注册成功！激活邮件已发送，请到邮箱中查看！</string>
@@ -238,7 +238,7 @@
     <string name="error_same_nickname">昵称与原有相同，无需修改</string>
     <string name="error_new_company_name_empty">公司新名称不能为空</string>
     <string name="error_same_company_name">与原公司名相同，无需修改</string>
-    <string name="error_number_wrong_format">数字输入格式不正确</string>
+    <string name="error_number_wrong_format">请输入消费金额</string>
     <string name="error_password_empty">密码不能为空</string>
     <string name="error_old_password_empty">请输入旧密码</string>
     <string name="error_new_password_empty">请输入新密码</string>
